[gd_scene load_steps=10 format=2]

[ext_resource path="res://Font/NewTegomin-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main/Script/MenuButtons.gd" type="Script" id=2]
[ext_resource path="res://Main/Script/DifficultyMenu.gd" type="Script" id=3]
[ext_resource path="res://Main/Script/StartMenu.gd" type="Script" id=4]
[ext_resource path="res://Main/Script/Start.gd" type="Script" id=5]
[ext_resource path="res://Main/Script/Difficulty.gd" type="Script" id=6]
[ext_resource path="res://Main/Pictures/Galaxy_menu1.jpg" type="Texture" id=7]
[ext_resource path="res://Main/Script/UI.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 1, 0.164706, 0.164706, 1 )
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
margin_left = -38.5562
margin_top = -642.267
margin_right = 2521.44
margin_bottom = 957.733
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Title" type="Label" parent="UI"]
margin_top = 50.0
margin_right = 412.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.847059, 0.94902, 0.34902, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Anatomy of the 
Skeleton"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="Node2D" parent="UI"]
script = ExtResource( 2 )

[node name="Start" type="Node2D" parent="UI/MenuButtons"]
script = ExtResource( 5 )

[node name="StartMenu" type="VBoxContainer" parent="UI/MenuButtons/Start"]
margin_top = 580.0
margin_right = 412.0
margin_bottom = 783.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_right = 412.0
margin_bottom = 65.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.352941, 0, 1 )
custom_colors/font_color_hover = Color( 0.133333, 0.960784, 0.203922, 1 )
enabled_focus_mode = 0
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_top = 69.0
margin_right = 412.0
margin_bottom = 134.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.352941, 0, 1 )
custom_colors/font_color_hover = Color( 0.133333, 0.960784, 0.203922, 1 )
enabled_focus_mode = 0
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_top = 138.0
margin_right = 412.0
margin_bottom = 203.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.352941, 0, 1 )
custom_colors/font_color_hover = Color( 0.133333, 0.960784, 0.203922, 1 )
enabled_focus_mode = 0
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Start/StartMenu"]

[node name="Ch_menu" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( 412, 0 )
script = ExtResource( 6 )

[node name="Ch_menu" type="VBoxContainer" parent="UI/MenuButtons/Ch_menu"]
margin_top = 580.0
margin_right = 412.0
margin_bottom = 852.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3DModel" type="Button" parent="UI/MenuButtons/Ch_menu/Ch_menu"]
margin_right = 412.0
margin_bottom = 65.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.352941, 0, 1 )
custom_colors/font_color_hover = Color( 0.133333, 0.960784, 0.203922, 1 )
enabled_focus_mode = 0
text = "3DModel"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Button" parent="UI/MenuButtons/Ch_menu/Ch_menu"]
margin_top = 69.0
margin_right = 412.0
margin_bottom = 134.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.352941, 0, 1 )
custom_colors/font_color_hover = Color( 0.133333, 0.960784, 0.203922, 1 )
enabled_focus_mode = 0
text = "Text"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Test" type="Button" parent="UI/MenuButtons/Ch_menu/Ch_menu"]
margin_top = 138.0
margin_right = 412.0
margin_bottom = 203.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.352941, 0, 1 )
custom_colors/font_color_hover = Color( 0.133333, 0.960784, 0.203922, 1 )
text = "Ready for a test?"
flat = true

[node name="Back" type="Button" parent="UI/MenuButtons/Ch_menu/Ch_menu"]
margin_top = 207.0
margin_right = 412.0
margin_bottom = 272.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.352941, 0, 1 )
custom_colors/font_color_hover = Color( 0.133333, 0.960784, 0.203922, 1 )
enabled_focus_mode = 0
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ch_tween" type="Tween" parent="UI/MenuButtons/Ch_menu/Ch_menu"]
[connection signal="pressed" from="UI/MenuButtons/Start/StartMenu/Start" to="UI" method="_on_Start_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Ch_menu/Ch_menu/Back" to="UI" method="_on_Back_pressed"]
